--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "overrides": {
     "@svgr/webpack": "^8.0.1",
-    "@adobe/css-tools": "^4.3.1",
-    "postcss": "^8.4.31"
+    "@adobe/css-tools": "^4.3.1"
   },
   "scripts": {
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
@@ -40,8 +39,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
     "vite": "^4.5.5",
     "vitest": "^0.34.6"
   }
